# simple_ekf

./: .gitignore  CMakeLists.txt  ReadMe.md  requirements.txt  setup_dependencies.py  start
configs/: config.yaml
flightData/: .gitignore
include/: dynamics_functions.hpp  earth_functions.hpp  helper_functions.hpp  propagate.hpp
msgs/: .gitignore  CMakeLists.txt  altitude.lcm  geodeticposition3d.lcm  geodeticposition3d_type.lcm  header.lcm  imu.lcm  positionvelocityattitude.lcm  timestamp.lcm
plotting/: plot.sh  py_mekf_plotting.py
run/: project_run.sh
src/: CMakeLists.txt  dynamics_functions.cpp  earth_functions.cpp  helper_functions.cpp  myProject.cpp  propagate.cpp  publish_imu.py  simple_ekf.cpp
